# tri-pp

./: CMakeLists.txt  Dockerfile  TriceraPreprocessorMain.cpp  docker-build.sh  in.c  mk  readme.md
.github/workflows/: build-unix.yml  cmake-single-platform.yml
encodings/: None.c.enc  R.c.enc  RW-fun.c.enc  RW.c.enc
include/: CXXInfoExtractor.hpp  CXXToCPlusTranslator.hpp  CharAndStringLiteralRewriter.hpp  CharRewriter.hpp  DesignatedInitializerEliminator.hpp  Determinizer.hpp  ExecutionCountAnalyzer.hpp  FactsCollector.hpp  ForLoopStmtExtractor.hpp  FuncPtrDevirtualizer.hpp  HeapAccessNormalizer.hpp  HeapEncoder.hpp  LineMarkerEmitter.hpp  NondetLoopGuardRewriter.hpp  TrackedRewriter.hpp  TriCeraPreprocessorMain.hpp  TriceraConfig.hpp  TriceraConfig.hpp.in  TriceraPreprocessor.hpp  TypeCanoniser.hpp  TypedefRemover.hpp  UniqueCallSiteTransformer.hpp  UnusedDeclCommenter.hpp  UsedFunctionAndTypeCollector.hpp  Utilities.hpp
lib/: CXXInfoExtractor.cpp  CXXToCPlusTranslator.cpp  CharAndStringLiteralRewriter.cpp  CharRewriter.cpp  DesignatedInitializerEliminator.cpp  Determinizer.cpp  ExecutionCountAnalyzer.cpp  FactsCollector.cpp  ForLoopStmtExtractor.cpp  FuncPtrDevirtualizer.cpp  HeapAccessNormalizer.cpp  HeapEncoder.cpp  LineMarkerEmitter.cpp  NondetLoopGuardRewriter.cpp  TrackedRewriter.cpp  TriceraPreprocessor.cpp  TypeCanoniser.cpp  TypedefRemover.cpp  UniqueCallSiteTransformer.cpp  UnusedDeclCommenter.cpp  UsedFunctionAndTypeCollector.cpp  Utilites.cpp
llvm/: CMakeLists.txt
llvm/cmake/modules/: LinuxMacosBuild.cmake
tests/: runalldirs  rundir
tests/cpp_support/: Answers  access_member_vars.cpp  elab_type_nested_classes.cpp  elab_type_simple.cpp  inheritance_multiple.cpp  namespaces_nested.cpp  non_qual_dtor.cpp  qualified_function_calls.cpp  runtests  templates_basic.cpp  templates_complex.cpp  templates_typedef.cpp  throw_test.cpp  throw_with_cast.cpp
tests/facts/: Answers  determinize_adds_arrays.c  determinize_with_own_arrays.c  exceptions.cpp  malloc_in_removed_decl.c  malloc_use.c  nothing_referenced.c  runtests  sized_array.c  time_tokens.c  unbounded_array_param.c
tests/line_markers/: Answers  acsl_annotations.c  chained_markers.c  check_markers.py  clone_functions.c  cxx_templates.cpp  determinize_top.c  geometry_preserving.c  multiline_for.c  runtests
tests/program_transformations/: Answers  determinize.c  entry_function.c  loop_rewrite.c  make_calls_unique.c  no_decl_slice.c  runtests
tests/rewrite_conflicts/: Answers  clean_no_conflict.c  conflict_nested_nondet.c  guard_copy_canonised.c  runtests
tests/typedef_remover/: Answers  anonymous_struct_typedef.c  basic_type_alias.c  enum_typedef.c  multi_typedef.c  nested_struct.c  runtests  struct_array.c  struct_combined_fields.c  struct_multi_field.c  struct_pointer.c  struct_single_line.c  typedef_removal.c
tests/unused_decl_commenter/: Answers  array_of_structs.c  array_of_structs_unused.c  assert_macro.c  enum_array_size.c  enum_forward_decl.c  enum_in_expr.c  enum_in_struct.c  enum_in_struct_unused.c  func_decl_impl_split.c  func_decl_impl_unused.c  func_decl_unused.c  global_var_used.c  no_decl_slice.c  param_struct.c  param_struct_unused.c  pointer_to_struct.c  pointer_to_struct_unused.c  recursive.c  return_struct.c  return_struct_unused.c  runtests  struct_forward_decl.c  struct_in_struct.c  struct_in_struct_unused.c  typedef_struct_unused.c  typedef_struct_usage.c  unused_enum.c  unused_func.c  unused_struct.c  used_func.c  used_struct.c
